# aws-lambda-etl

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  samconfig.toml  template.yaml
layer/: requirements.txt
scripts/: apply_static_ddl.py  migration_tables.toml  pipeline_monitoring.sql  run_local.py  sam_local_env.json  update_local_db.py
src/: requirements.txt
src/common/: config.py  database.py  email_sender.py  exceptions.py  flat_file.py  json_loader.py  pipe.py  transformation_tools.py
src/common/enums/: loading_method.py  output_destination.py  status.py
src/pipes/_legacy/: README.md
src/pipes/data_extraction/: current_inventory_extract.py  dwh_to_s3_extract.py
src/pipes/dimensions/: README.md  rpd_date.py
src/pipes/facts/: fact_inventory_snapshot.py
src/static/: load_static.py
src/static/ddl/: log_tables.sql
src/static/templates/: email_export.html
